# Moj-Elektro-API-Client

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.githooks/: _run_pytest.sh  pre-commit  pre-push
examples/: merilna_tocka.py  merilno_mesto.py  meter_readings.py  reading_qualities.py  reading_types.py
mojelektro/: __init__.py  _http.py  client.py  config.py  exceptions.py  types.py
mojelektro/models/: __init__.py  common.py  merilna_tocka.py  merilno_mesto.py  meter_readings.py  reading_qualities.py  reading_type.py
tests/: conftest.py  test_client_merilna_tocka.py  test_client_merilno_mesto.py  test_client_meter_readings.py  test_client_reading_qualities.py  test_client_reading_type.py  test_config.py  test_exceptions.py
